--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -16,67 +16,61 @@
     <link rel="stylesheet" href="css/grid.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <div class="navbar">
-          <div>
-            <a href="#"
-              ><img class="logo" src="Images/rsz_logo.png" alt="Logo"
-            /></a>
-          </div>
-          <div class="hamburger-menu">
-            <i class="fa-solid fa-bars hamburger-icon"></i>
-            <div class="hamburger-content">
-              <ul>
-                <li class="nav-list"><a href="home.html">Home</a></li>
-                <li class="nav-list"><a href="about.html">About</a></li>
-                <li class="nav-list">
-                  <a href="#">Portfolio</a>
-                </li>
-                <li class="nav-list"><a href="skills.html">Skills</a></li>
-                <li class="nav-list">
-                  <a href="contact.html">Contact Me</a>
-                </li>
-              </ul>
-            </div>
+    <header class="header">
+      <nav class="navbar">
+        <div class="navbar__logo">
+          <a href="#"
+            ><img class="logo" src="Images/rsz_logo.png" alt="Logo"
+          /></a>
+        </div>
+        <div class="navbar__hamburger-menu">
+          <i class="fa-solid fa-bars hamburger-icon"></i>
+          <div class="navbar__hamburger-content">
+            <ul class="navbar__ul">
+              <li class="navbar__li"><a href="home.html">Home</a></li>
+              <li class="navbar__li"><a href="about.html">About</a></li>
+              <li class="navbar__li"><a href="#">Portfolio</a></li>
+              <li class="navbar__li"><a href="skills.html">Skills</a></li>
+              <li class="navbar__li"><a href="contact.html">Contact Me</a></li>
+            </ul>
           </div>
         </div>
       </nav>
     </header>
 
-    <main class="port">
-      <section>
-        <div>
+    <main class="main__portfolio">
+      <section class="portfolio">
+        <div class="portfolio__latest">
           <h2 class="headers">Latest Portfolio</h2>
           <div>
-            <p class="portfolio-content">
+            <p class="portfolio__content">
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Excepturi, velit!
             </p>
           </div>
         </div>
-        <div class="filter-wrapper">
-          <div class="project-filter">
-            <ul>
-              <li>All Projects</li>
-              <li>UI/UX Design</li>
-              <li>Web Development</li>
-              <li>App Developement</li>
+        <div class="portfolio__filter-wrapper">
+          <div class="portfolio__project-filter">
+            <ul class="portfolio__ul">
+              <li class="portfolio__li">All Projects</li>
+              <li class="portfolio__li">UI/UX Design</li>
+              <li class="portfolio__li">Web Development</li>
+              <li class="portfolio__li">App Developement</li>
             </ul>
           </div>
         </div>
 
-        <div class="total-project-container">
-          <div class="project-container">
-            <figure>
+        <div class="portfolio__total-project-container">
+          <div class="portfolio__project-container">
+            <figure class="portfolio__figure">
               <img src="Images/cat_small.jpg" alt="Portfolio Details Photo" />
             </figure>
-            <div class="project-center-content">
-              <div class="port-text">
+            <div class="portfolio__project-center-content">
+              <div class="portfolio__port-text">
                 <div>
                   <h3><a href="port-details (1).html">Project 1</a></h3>
                 </div>
-                <div class="desc">
+                <div class="portfolio__desc">
                   <p>
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                   </p>
@@ -84,16 +78,16 @@
               </div>
             </div>
           </div>
-          <div class="project-container">
-            <figure>
+          <div class="portfolio__project-container">
+            <figure class="portfolio__figure">
               <img src="Images/cat_small.jpg" alt="Portfolio Details Photo" />
             </figure>
-            <div class="project-center-content">
-              <div class="port-text">
+            <div class="portfolio__project-center-content">
+              <div class="portfolio__port-text">
                 <div>
                   <h3><a href="port-details (2).html">Project 2</a></h3>
                 </div>
-                <div class="desc">
+                <div class="portfolio__desc">
                   <p>
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                   </p>
@@ -101,16 +95,16 @@
               </div>
             </div>
           </div>
-          <div class="project-container">
-            <figure>
+          <div class="portfolio__project-container">
+            <figure class="portfolio__figure">
               <img src="Images/cat_small.jpg" alt="Portfolio Details Photo" />
             </figure>
-            <div class="project-center-content">
-              <div class="port-text">
+            <div class="portfolio__project-center-content">
+              <div class="portfolio__port-text">
                 <div>
                   <h3><a href="port-details (3).html">Project 3</a></h3>
                 </div>
-                <div class="desc">
+                <div class="portfolio__desc">
                   <p>
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                   </p>
@@ -118,16 +112,16 @@
               </div>
             </div>
           </div>
-          <div class="project-container">
-            <figure>
+          <div class="portfolio__project-container">
+            <figure class="portfolio__figure">
               <img src="Images/cat_small.jpg" alt="Portfolio Details Photo" />
             </figure>
-            <div class="project-center-content">
-              <div class="port-text">
+            <div class="portfolio__project-center-content">
+              <div class="portfolio__port-text">
                 <div>
                   <h3><a href="port-details (4).html">Project 4</a></h3>
                 </div>
-                <div class="desc">
+                <div class="portfolio__desc">
                   <p>
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                   </p>
@@ -135,16 +129,16 @@
               </div>
             </div>
           </div>
-          <div class="project-container">
-            <figure>
+          <div class="portfolio__project-container">
+            <figure class="portfolio__figure">
               <img src="Images/cat_small.jpg" alt="Portfolio Details Photo" />
             </figure>
-            <div class="project-center-content">
-              <div class="port-text">
+            <div class="portfolio__project-center-content">
+              <div class="portfolio__port-text">
                 <div>
                   <h3><a href="port-details (5).html">Project 5</a></h3>
                 </div>
-                <div class="desc">
+                <div class="portfolio__desc">
                   <p>
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                   </p>
@@ -152,16 +146,16 @@
               </div>
             </div>
           </div>
-          <div class="project-container">
-            <figure>
+          <div class="portfolio__project-container">
+            <figure class="portfolio__figure">
               <img src="Images/cat_small.jpg" alt="Portfolio Details Photo" />
             </figure>
-            <div class="project-center-content">
-              <div class="port-text">
+            <div class="portfolio__project-center-content">
+              <div class="portfolio__port-text">
                 <div>
                   <h3><a href="port-details (6).html">Project 6</a></h3>
                 </div>
-                <div class="desc">
+                <div class="portfolio__desc">
                   <p>
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                   </p>
@@ -175,8 +169,8 @@
 
     <!-- Footer Area -->
     <footer>
-      <div>
-        <div class="end-logo">
+      <div class="footer__logo-socials">
+        <div class="footer__end-logo">
           <a href="#"
             ><img class="logo" src="Images/rsz_logo.png" alt="Logo"
           /></a>
@@ -185,7 +179,7 @@
             saepe?
           </p>
         </div>
-        <ul class="socials">
+        <ul class="footer__socials">
           <li>
             <a href="#"><i class="fa-brands fa-linkedin"></i></a>
           </li>
@@ -200,31 +194,31 @@
           </li>
         </ul>
       </div>
-      <div>
+      <div class="footer__useful-links">
         <h2>Useful Links</h2>
-        <ul class="useful-links">
+        <ul class="footer__ul">
           <li><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Portfolio</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
       </div>
-      <div class="contact-info">
+      <div class="footer__contact-info">
         <h2>Contact Info</h2>
-        <address>
+        <address class="footer_address">
           <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi,
             sint?
           </p>
-          <ul>
+          <ul class="footer__contact-ul">
             <li>Tel: +251989971680</li>
             <li>Email: simon.dereje@aait.edu.et</li>
           </ul>
         </address>
       </div>
-      <div class="copyright">
+      <div class="footer__copyright">
         <p>Copyright 2023. All Rights Reserved</p>
-        <p>Powered by Simon</p>
+        <p class="footer__p--powered">Powered by Simon</p>
       </div>
     </footer>
   </body>
