--- a/src/about.html
+++ b/src/about.html
@@ -16,53 +16,47 @@
     <link rel="stylesheet" href="css/grid.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <div class="navbar">
-          <div>
-            <a href="#"
-              ><img class="logo" src="Images/rsz_logo.png" alt="Logo"
-            /></a>
-          </div>
-          <div class="hamburger-menu">
-            <i class="fa-solid fa-bars hamburger-icon"></i>
-            <div class="hamburger-content">
-              <ul>
-                <li class="nav-list"><a href="home.html">Home</a></li>
-                <li class="nav-list"><a href="#">About</a></li>
-                <li class="nav-list">
-                  <a href="portfolio.html">Portfolio</a>
-                </li>
-                <li class="nav-list"><a href="skills.html">Skills</a></li>
-                <li class="nav-list">
-                  <a href="contact.html">Contact Me</a>
-                </li>
-              </ul>
-            </div>
+    <header class="header">
+      <nav class="navbar">
+        <div class="navbar__logo">
+          <a href="#"
+            ><img class="logo" src="Images/rsz_logo.png" alt="Logo"
+          /></a>
+        </div>
+        <div class="navbar__hamburger-menu">
+          <i class="fa-solid fa-bars hamburger-icon"></i>
+          <div class="navbar__hamburger-content">
+            <ul class="navbar__ul">
+              <li class="navbar__li"><a href="home.html">Home</a></li>
+              <li class="navbar__li"><a href="#">About</a></li>
+              <li class="navbar__li"><a href="portfolio.html">Portfolio</a></li>
+              <li class="navbar__li"><a href="skills.html">Skills</a></li>
+              <li class="navbar__li"><a href="contact.html">Contact Me</a></li>
+            </ul>
           </div>
         </div>
       </nav>
     </header>
 
-    <main>
+    <main class="main">
       <div>
-        <div class="about-vid">
+        <div class="main__about-vid">
           <video src="Images/timelapse.mp4" controls loop>Hills</video>
           <div class="about">
             <h2 class="headers">About Me</h2>
-            <p class="content">
+            <p class="about__content">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea
               dolorum vero, molestias doloremque atque dicta dignissimos ipsa,
               reprehenderit error inventore voluptate recusandae quidem,
               temporibus amet expedita repudiandae?
             </p>
-            <p class="content">
+            <p class="sbout__content">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea
               dolorum vero, molestias doloremque atque dicta dignissimos ipsa,
               reprehenderit error inventore voluptate recusandae quidem,
               temporibus amet expedita repudiandae?
             </p>
-            <a class="call-to-action-button download" href="#" download="#">
+            <a class="hero-page__cta-button download" href="#" download="#">
               <i class="fa-solid fa-download"></i>
               Download Resume
             </a>
@@ -72,74 +66,106 @@
         <!--Education and Experience-->
         <section class="education-work">
           <h2 class="headers">My Education and Work Experience</h2>
-          <div class="edu">
+          <div class="education-work__edu">
             <h3>Education</h3>
             <div>
-              <ul>
+              <ul class="education-work__ul">
                 <li>
-                  <div class="class">
-                    <div class="school">Stanford University</div>
-                    <div class="year">2023</div>
+                  <div class="education-work__class">
+                    <div class="education-work__school">
+                      Stanford University
+                    </div>
+                    <div class="education-work__year">2023</div>
                   </div>
-                  <div class="course">Certificate in Machine Learning</div>
+                  <div class="education-work__course">
+                    Certificate in Machine Learning
+                  </div>
                 </li>
                 <li>
-                  <div class="class">
-                    <div class="school">Stanford University</div>
-                    <div class="year">2023</div>
+                  <div class="education-work__class">
+                    <div class="education-work__school">
+                      Stanford University
+                    </div>
+                    <div class="education-work__year">2023</div>
                   </div>
-                  <div class="course">Certificate in Machine Learning</div>
+                  <div class="education-work__course">
+                    Certificate in Machine Learning
+                  </div>
                 </li>
                 <li>
-                  <div class="class">
-                    <div class="school">Stanford University</div>
-                    <div class="year">2023</div>
+                  <div class="education-work__class">
+                    <div class="education-work__school">
+                      Stanford University
+                    </div>
+                    <div class="education-work__year">2023</div>
                   </div>
-                  <div class="course">Certificate in Machine Learning</div>
+                  <div class="education-work__course">
+                    Certificate in Machine Learning
+                  </div>
                 </li>
                 <li>
-                  <div class="class">
-                    <div class="school">Stanford University</div>
-                    <div class="year">2023</div>
+                  <div class="education-work__class">
+                    <div class="education-work__school">
+                      Stanford University
+                    </div>
+                    <div class="education-work__year">2023</div>
                   </div>
-                  <div class="course">Certificate in Machine Learning</div>
+                  <div class="education-work__course">
+                    Certificate in Machine Learning
+                  </div>
                 </li>
               </ul>
             </div>
           </div>
 
           <!--Work Experience-->
-          <div class="edu">
+          <div class="education-work__edu">
             <h3>Work Experience</h3>
             <div>
-              <ul>
+              <ul class="education-work__ul">
                 <li>
-                  <div class="class">
-                    <div class="school">Stanford University</div>
-                    <div class="year">2023</div>
+                  <div class="education-work__class">
+                    <div class="education-work__school">
+                      Stanford University
+                    </div>
+                    <div class="education-work__year">2023</div>
                   </div>
-                  <div class="course">Certificate in Machine Learning</div>
+                  <div class="education-work__course">
+                    Certificate in Machine Learning
+                  </div>
                 </li>
                 <li>
-                  <div class="class">
-                    <div class="school">Stanford University</div>
-                    <div class="year">2023</div>
+                  <div class="education-work__class">
+                    <div class="education-work__school">
+                      Stanford University
+                    </div>
+                    <div class="education-work__year">2023</div>
                   </div>
-                  <div class="course">Certificate in Machine Learning</div>
+                  <div class="education-work__course">
+                    Certificate in Machine Learning
+                  </div>
                 </li>
                 <li>
-                  <div class="class">
-                    <div class="school">Stanford University</div>
-                    <div class="year">2023</div>
+                  <div class="education-work__class">
+                    <div class="education-work__school">
+                      Stanford University
+                    </div>
+                    <div class="education-work__year">2023</div>
                   </div>
-                  <div class="course">Certificate in Machine Learning</div>
+                  <div class="education-work__course">
+                    Certificate in Machine Learning
+                  </div>
                 </li>
                 <li>
-                  <div class="class">
-                    <div class="school">Stanford University</div>
-                    <div class="year">2023</div>
+                  <div class="education-work__class">
+                    <div class="education-work__school">
+                      Stanford University
+                    </div>
+                    <div class="education-work__year">2023</div>
                   </div>
-                  <div class="course">Certificate in Machine Learning</div>
+                  <div class="education-work__course">
+                    Certificate in Machine Learning
+                  </div>
                 </li>
               </ul>
             </div>
@@ -150,8 +176,8 @@
 
     <!-- Footer Area -->
     <footer>
-      <div>
-        <div class="end-logo">
+      <div class="footer__logo-socials">
+        <div class="footer__end-logo">
           <a href="#"
             ><img class="logo" src="Images/rsz_logo.png" alt="Logo"
           /></a>
@@ -160,7 +186,7 @@
             saepe?
           </p>
         </div>
-        <ul class="socials">
+        <ul class="footer__socials">
           <li>
             <a href="#"><i class="fa-brands fa-linkedin"></i></a>
           </li>
@@ -175,31 +201,31 @@
           </li>
         </ul>
       </div>
-      <div>
+      <div class="footer__useful-links">
         <h2>Useful Links</h2>
-        <ul class="useful-links">
+        <ul class="footer__ul">
           <li><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Portfolio</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
       </div>
-      <div class="contact-info">
+      <div class="footer__contact-info">
         <h2>Contact Info</h2>
-        <address>
+        <address class="footer_address">
           <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi,
             sint?
           </p>
-          <ul>
+          <ul class="footer__contact-ul">
             <li>Tel: +251989971680</li>
             <li>Email: simon.dereje@aait.edu.et</li>
           </ul>
         </address>
       </div>
-      <div class="copyright">
+      <div class="footer__copyright">
         <p>Copyright 2023. All Rights Reserved</p>
-        <p>Powered by Simon</p>
+        <p class="footer__p--powered">Powered by Simon</p>
       </div>
     </footer>
   </body>
