--- a/src/home.html
+++ b/src/home.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home Page</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,600;0,700;1,200;1,400&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,600;0,700;1,200;1,400&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -15,64 +18,64 @@
   </head>
   <body>
     <div class="hero-page">
-      <header>
-        <nav>
-          <div class="navbar">
-            <div>
-              <a href="#"
-                ><img class="logo" src="Images/rsz_logo.png" alt="Logo"
-              /></a>
-            </div>
-            <div class="hamburger-menu">
-               <i class="fa-solid fa-bars hamburger-icon"></i>
-              <div class="hamburger-content">
-                <ul>
-                  <li class="nav-list"><a href="#">Home</a></li>
-                  <li class="nav-list"><a href="about.html">About</a></li>
-                  <li class="nav-list">
-                    <a href="portfolio.html">Portfolio</a>
-                  </li>
-                  <li class="nav-list"><a href="skills.html">Skills</a></li>
-                  <li class="nav-list"><a href="contact.html">Contact Me</a></li>
-                </ul>
-              </div>
+      <header class="header">
+        <nav class="navbar">
+          <div class="navbar__logo">
+            <a href="#"
+              ><img class="logo" src="Images/rsz_logo.png" alt="Logo"
+            /></a>
+          </div>
+          <div class="navbar__hamburger-menu">
+            <i class="fa-solid fa-bars hamburger-icon"></i>
+            <div class="navbar__hamburger-content">
+              <ul class="navbar__ul">
+                <li class="navbar__li"><a href="#">Home</a></li>
+                <li class="navbar__li"><a href="about.html">About</a></li>
+                <li class="navbar__li">
+                  <a href="portfolio.html">Portfolio</a>
+                </li>
+                <li class="navbar__li"><a href="skills.html">Skills</a></li>
+                <li class="navbar__li">
+                  <a href="contact.html">Contact Me</a>
+                </li>
+              </ul>
             </div>
           </div>
         </nav>
       </header>
-      <main>
-        <div class="hero-page1">
-          <!--<img id="profile" src="Images/cat_small.jpg" alt="Cat" />-->
-          <h1>Hey, I'm Simon.</h1>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi
-            perspiciatis laudantium illo placeat minima rem? Officia ab eveniet
-            aliquid saepe.
-          </p>
-          <a class="call-to-action-button" href="#"> Hire Me </a>
-        </div>
     </div>
+    <main>
+      <div class="hero-page__content">
+        <h1 class="hero-page__title">Hey, I'm Simon.</h1>
+        <p class="hero-page__description">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi
+          perspiciatis laudantium illo placeat minima rem? Officia ab eveniet
+          aliquid saepe.
+        </p>
+        <a class="hero-page__cta-button" href="#"> Hire Me </a>
+      </div>
+
       <section class="services">
         <h2 class="headers">My Services</h2>
         <div class="service-card">
-          <h3 class="title-desc">User Interface</h3>
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et
-            obcaecati sequi at voluptatem doloremque error, quos ipsum tempore
-            vitae. 
-          </p>
-        </div>
-        <div class="service-card">
-          <h3 class="title-desc">Web Development</h3>
-          <p>
+          <h3 class="service-card__h3--desc">User Interface</h3>
+          <p class="service-card__p--desc">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et
             obcaecati sequi at voluptatem doloremque error, quos ipsum tempore
             vitae.
           </p>
         </div>
         <div class="service-card">
-          <h3 class="title-desc">Machine Learning</h3>
-          <p>
+          <h3 class="service-card__h3--desc">Web Development</h3>
+          <p class="service-card__p--desc">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et
+            obcaecati sequi at voluptatem doloremque error, quos ipsum tempore
+            vitae.
+          </p>
+        </div>
+        <div class="service-card">
+          <h3 class="service-card__h3--desc">Machine Learning</h3>
+          <p class="service-card__p--desc">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et
             obcaecati sequi at voluptatem doloremque error, quos ipsum tempore
             vitae.
@@ -83,16 +86,17 @@
 
     <!-- Footer Area -->
     <footer>
-      <div class="logo-socials">
-        <div class="end-logo">
-          <a href="#"><img class="logo" src="Images/rsz_logo.png" alt="Logo"
-            /></a>
+      <div class="footer__logo-socials">
+        <div class="footer__end-logo">
+          <a href="#"
+            ><img class="logo" src="Images/rsz_logo.png" alt="Logo"
+          /></a>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates,
             saepe?
           </p>
         </div>
-        <ul class="socials">
+        <ul class="footer__socials">
           <li>
             <a href="#"><i class="fa-brands fa-linkedin"></i></a>
           </li>
@@ -107,31 +111,31 @@
           </li>
         </ul>
       </div>
-      <div >
+      <div class="footer__useful-links">
         <h2>Useful Links</h2>
-        <ul class="useful-links">
+        <ul class="footer__ul">
           <li><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Portfolio</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
       </div>
-      <div class="contact-info">
+      <div class="footer__contact-info">
         <h2>Contact Info</h2>
-        <address>
+        <address class="footer_address">
           <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi,
             sint?
           </p>
-          <ul>
+          <ul class="footer__contact-ul">
             <li>Tel: +251989971680</li>
             <li>Email: simon.dereje@aait.edu.et</li>
           </ul>
         </address>
       </div>
-      <div class="copyright">
+      <div class="footer__copyright">
         <p>Copyright 2023. All Rights Reserved</p>
-        <p class="powered">Powered by Simon</p>
+        <p class="footer__p--powered">Powered by Simon</p>
       </div>
     </footer>
   </body>
